Resolved the card overlap issue on landscape mobile by changing
sizing with relative values

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,7 +61,6 @@ a:hover {
 }
 
 
-
 large {
     font-size: 24px;
 }
@@ -264,9 +263,11 @@ body {
     z-index: 2;
 
 }
+
 #expandMenu:hover {
     cursor: pointer;
 }
+
 .nav--items .bar--icon .bar {
     display: block;
     width: 35px;
@@ -398,11 +399,9 @@ E85A4F*/
 /*}*/
 
 
-#mobile-padding,#mobile-padding1,#mobile-padding2 {
+#mobile-padding, #mobile-padding1, #mobile-padding2 {
     display: none;
 }
-
-
 
 
 .work--grid {
@@ -411,13 +410,43 @@ E85A4F*/
     text-align: center;
 
 }
+#card-1 {
+    margin: 10%;
+}
+#card-2{
+    margin: 10%;
+}
+#card-3 {
+    margin: 10%;
+}
+#card-4 {
+    margin: 20%;
+}
+#card-5 {
+    margin: 20%;
+}
 
 @media (max-width: 600px) {
-    #mobile-padding,#mobile-padding1,#mobile-padding2 {
+    #mobile-padding, #mobile-padding1, #mobile-padding2 {
         display: block;
     }
-
+   #card-1 {
+       margin: 0 auto;
+   }
+   #card-2{
+       margin: 0 auto;
+   }
+   #card-3 {
+       margin: 0 auto;
+   }
+   #card-4 {
+       margin: 0 auto;
+   }
+   #card-5 {
+       margin: 0 auto;
+   }
 }
+
 
 
 .about {
@@ -436,7 +465,8 @@ E85A4F*/
 
 
 }
-.about .about--image img ::before{
+
+.about .about--image img ::before {
     object-fit: cover;
     margin: 10px 80px 20px 10px;
     max-height: calc(100px + 4vh + 6vw);
@@ -744,6 +774,7 @@ E85A4F*/
 }
 
 @media (max-width: 900px) {
+
     .nav--items .optional {
         display: none;
     }
